# QtMainWindow_Project_Template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Client_Code/Bico_QWindowThread_Sample/: Bico_QWindowThread_Sample.h  Bico_QWindowThread_Sample_UI.cpp  Bico_QWindowThread_Sample_UI.h
Client_Code/Bico_QWindowThread_Sample/Data_Object/: Bico_QWindowThread_Sample_Data.h
Client_Code/Task_1/: Task_1.h  Task_1_UI.cpp  Task_1_UI.h  Task_1_UI.ui
Template_Material/: bico_qwindowthread.h  bico_qwindowthread_ui.cpp  bico_qwindowthread_ui.h
src/: CMakeLists.txt  main.cpp
src/Client_Code/Bico_QWindowThread_Sample/: Bico_QWindowThread_Sample.cpp  Bico_QWindowThread_Sample.h  Bico_QWindowThread_Sample_UI.h  Bico_QWindowThread_Sample_UI.ui
src/Client_Code/Bico_QWindowThread_Sample/Data_Object/: Bico_QWindowThread_Sample_Data.cpp
src/Client_Code/Task1/: Task1.cpp  Task1.h  Task1_Paths.cmake  Task1_UI.cpp  Task1_UI.h  Task1_UI.ui
src/Client_Code/Task1/Data_Object/: Task1_Data.h
src/Client_Code/Task_1/: Task_1.cpp  Task_1.h  Task_1_UI.h
src/Client_Code/Task_1/Data_Object/: Task_1_Data.h
src/lib/: bico_qwindowthread.cpp  bico_qwindowthread.h  bico_qwindowthread_ui.cpp  bico_qwindowthread_ui.h
